images + porting over

--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -1,3 +1,11 @@
 <footer>
-    <!-- footer content -->
+    
+        <img class="wlogo" alt="Creepy Critters" src="/assets/CC white.png" />
+        <a href=""> 
+            <p> About Us </p> </a>
+        <a href=""> 
+            <p> Other Resources </p> </a>
+        <a href=""> 
+            <p> Learn More </p> </a>
+   
 </footer>
