--- a/src/assets/menu.css
+++ b/src/assets/menu.css
@@ -2,7 +2,7 @@
   /* this is the height of the header bar */
   --header-height: 130px;
   /* this is the background color of the header bar and panel */
-  --menu-bg: #9ae9cf;
+  --menu-bg: #E4DDCB;
   --menu-highlight-hover: white;
 }
 
