--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -1,7 +1,8 @@
 <a href="#main-content" class="skip-link">Skip to content</a>
 <header class="main-nav-container">
-    <a href="/" class="header-logo-link"><img class="header-logo" alt="Home" src="https://place-hold.it/90x90" /></a>
-
+    <a href="/" class="header-logo-link"> <img class="logo" alt="Creepy Critters" src="/assets/CC icon.png" /></a>
+    <div><h1> Creepy </h1>
+    <h1> Critters </h1></div>
     <nav class="main-nav">
         <div class="nav-button-right">
             <button class="btn-toggle-menu">
@@ -25,3 +26,4 @@
 
     </nav>
 </header>
+
