fixed links + positioning + menu

--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -1,11 +1,14 @@
 <footer>
-    
-        <img class="wlogo" alt="Creepy Critters" src="/assets/CC white.png" />
-        <a href=""> 
-            <p> About Us </p> </a>
-        <a href=""> 
-            <p> Other Resources </p> </a>
-        <a href=""> 
-            <p> Learn More </p> </a>
-   
+
+    <img class="wlogo" alt="Creepy Critters" src="/assets/CC white.png" />
+
+    <div>
+        <a href="">
+            About Us </a>
+        <a href="">
+            Other Resources </a>
+        <a href="">
+            Learn More </a>
+    </div>
+
 </footer>
