--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -20,8 +20,10 @@
 
         <div class="nav-items-list nav-items-list-hidden">
             <a href="/">Home</a>
-            <a href="/page2/">Page 2</a>
-            <a href="/subfolder/example/">A third page in a folder</a>
+            <a href="/about"> About Us </a>
+            <a href="/spiders">Spiders</a>
+            <a href="/salamanders">Salamanders</a>
+            <a href="/snakes">Snakes</a>
         </div>
 
     </nav>
