--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,12 +1,28 @@
 /* you can put styles in here :) */
+html, body {
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
+
+.home main {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    background-color:#FAECC9
+
+}
+
+
 body {
     background: #FDF7EE;
+    margin: 0;
 }
 
 h1 {
     color: #000;
     font-family: "Jua";
-    font-size: 70px;
+    font-size: 40px;
     font-style: normal;
     font-weight: 400;
     
@@ -16,12 +32,12 @@ nav {
     color:#000
 }
 
-p {
+.home p {
     max-width: 700px;
-    text-align: center;
     margin-left:auto;
     margin-right:auto;
     padding-bottom: 50px;
+    margin: 0;
 }
 
 .top h1 {
@@ -53,6 +69,9 @@ img {
     display:flex;
     flex-direction: column;
     margin:auto;
+    padding-top: 50px;
+    background-color: #FDF7EE;
+    width: 100%;
 }
 
 .links {
@@ -102,9 +121,10 @@ footer {
 }
 header {
     background: #E4DDCB;
-    height: 250px;
+    height: 265px;
     flex-shrink: 0;
     vertical-align: top;
+    padding-top: 15px;
 }
  header h1 {
     margin: 0;
@@ -120,8 +140,15 @@ header {
     text-align: center;
     padding-top: 30px;
     padding-bottom: 30px;
+    width: 100vw;
     
     
+    
+}
+
+.icons a img {
+    width: 100%;
+    max-width: 300px ;
 }
 
 .wlogo {
@@ -135,4 +162,15 @@ header {
     color: hotpink;
 }
 
+footer div {
+    display:flex;
+    flex-direction: column;
+    gap: 10px;
+}
 
+@media (min-width:1080px) {
+    h1 {
+        font-size: 60px;
+    }
+
+}
