added jumping spider info and fixed link problems

--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -3,11 +3,11 @@
     <img class="wlogo" alt="Creepy Critters" src="/assets/CC white.png" />
 
     <div>
-        <a href="">
+        <a href="/about" id="footlink">
             About Us </a>
-        <a href="">
+        <a href="" id="footlink">
             Other Resources </a>
-        <a href="">
+        <a href="" id="footlink">
             Learn More </a>
     </div>
 
