--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -19,11 +19,11 @@
         </div>
 
         <div class="nav-items-list nav-items-list-hidden">
-            <a href="/">Home</a>
-            <a href="/about"> About Us </a>
-            <a href="/spiders">Spiders</a>
-            <a href="/salamanders">Salamanders</a>
-            <a href="/snakes">Snakes</a>
+            <a href="/index" id="footlink">Home</a>
+            <a href="/about" id="footlink"> About Us </a>
+            <a href="/spiders" id="footlink">Spiders</a>
+            <a href="/salamanders" id="footlink">Salamanders</a>
+            <a href="/snakes" id="footlink">Snakes</a>
         </div>
 
     </nav>
