added extras info and danger spiders and fixed errors

--- a/src/_includes/footer.liquid
+++ b/src/_includes/footer.liquid
@@ -5,9 +5,9 @@
     <div>
         <a href="/about" id="footlink">
             About Us </a>
-        <a href="" id="footlink">
+        <a href="/about" id="footlink">
             Other Resources </a>
-        <a href="" id="footlink">
+        <a href="/about" id="footlink">
             Learn More </a>
     </div>
 
