--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -85,7 +85,7 @@ img {
     gap: 25px;
     padding: 20px;
     position: fixed;
-    top: 25%;
+    top: 75%;
     right: 0;
     font-family: "Kreon";
     font-size: 25px;
@@ -343,5 +343,8 @@ color: #95AA63;
     }
     spiders {
         padding:-10px;
+    }
+    .page-nav {
+        top:25%;
     }
 }
