fixed header constast

--- a/src/_includes/header.liquid
+++ b/src/_includes/header.liquid
@@ -19,11 +19,11 @@
         </div>
 
         <div class="nav-items-list nav-items-list-hidden">
-            <a href="/index" id="footlink">Home</a>
-            <a href="/about" id="footlink"> About Us </a>
-            <a href="/spiders" id="footlink">Spiders</a>
-            <a href="/salamanders" id="footlink">Salamanders</a>
-            <a href="/snakes" id="footlink">Snakes</a>
+            <a href="/index" id="headlink">Home</a>
+            <a href="/about" id="headlink"> About Us </a>
+            <a href="/spiders" id="headlink">Spiders</a>
+            <a href="/salamanders" id="headlink">Salamanders</a>
+            <a href="/snakes" id="headlink">Snakes</a>
         </div>
 
     </nav>
